Added Open Sans

--- a/index.html
+++ b/index.html
@@ -8,9 +8,24 @@
         <script type="text/javascript" src="//use.typekit.net/mml2eue.js"></script>
 		<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
         <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,300italic,400italic,600italic' rel='stylesheet' type='text/css'>
+        <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
+        <section class="rooney-web">
+            <h1>Heading One</h1>
+            <hr />
+            <h2>Heading Two</h2>
+            <hr />
+            <h3>Heading Three</h3>
+            <hr />
+            <p class="intro">Mel id sensibus explicari rationibus, in nec quod everti, decore appetere te sea. Nisl ipsum habemus ea mei, in aeterno definitionem sit. Cu mei homero epicuri deleniti, affert iriure timeam ei mea. Pertinax partiendo sed te. Mundi senserit percipitur ne per. Ex usu meliore consulatu.</p>
+            <hr />
+            <p>Mel id sensibus explicari rationibus, in nec quod everti, decore appetere te sea. Nisl ipsum habemus ea mei, in aeterno definitionem sit. Cu mei homero epicuri deleniti, affert iriure timeam ei mea. Pertinax partiendo sed te. Mundi senserit percipitur ne per. Ex usu meliore consulatu.</p>
+            <hr />
+            <p class="light">Mel id sensibus explicari rationibus, in nec quod everti, decore appetere te sea. Nisl ipsum habemus ea mei, in aeterno definitionem sit. Cu mei homero epicuri deleniti, affert iriure timeam ei mea. Pertinax partiendo sed te. Mundi senserit percipitur ne per. Ex usu meliore consulatu.</p>
+        </section>
+        <hr class="strong">
         <section class="source-sans-pro">
         	<h1>Heading One</h1>
             <hr />
@@ -25,18 +40,18 @@
     		<p class="light">Mel id sensibus explicari rationibus, in nec quod everti, decore appetere te sea. Nisl ipsum habemus ea mei, in aeterno definitionem sit. Cu mei homero epicuri deleniti, affert iriure timeam ei mea. Pertinax partiendo sed te. Mundi senserit percipitur ne per. Ex usu meliore consulatu.</p>
         </section>
         <hr class="strong">
-        <section class="rooney-web">
-        	<h1>Heading One</h1>
+        <section class="open">
+            <h1>Heading One</h1>
             <hr />
             <h2>Heading Two</h2>
             <hr />
             <h3>Heading Three</h3>
             <hr />
-    		<p class="intro">Mel id sensibus explicari rationibus, in nec quod everti, decore appetere te sea. Nisl ipsum habemus ea mei, in aeterno definitionem sit. Cu mei homero epicuri deleniti, affert iriure timeam ei mea. Pertinax partiendo sed te. Mundi senserit percipitur ne per. Ex usu meliore consulatu.</p>
-    		<hr />
-    		<p>Mel id sensibus explicari rationibus, in nec quod everti, decore appetere te sea. Nisl ipsum habemus ea mei, in aeterno definitionem sit. Cu mei homero epicuri deleniti, affert iriure timeam ei mea. Pertinax partiendo sed te. Mundi senserit percipitur ne per. Ex usu meliore consulatu.</p>
-    		<hr />
-    		<p class="light">Mel id sensibus explicari rationibus, in nec quod everti, decore appetere te sea. Nisl ipsum habemus ea mei, in aeterno definitionem sit. Cu mei homero epicuri deleniti, affert iriure timeam ei mea. Pertinax partiendo sed te. Mundi senserit percipitur ne per. Ex usu meliore consulatu.</p>
+            <p class="intro">Mel id sensibus explicari rationibus, in nec quod everti, decore appetere te sea. Nisl ipsum habemus ea mei, in aeterno definitionem sit. Cu mei homero epicuri deleniti, affert iriure timeam ei mea. Pertinax partiendo sed te. Mundi senserit percipitur ne per. Ex usu meliore consulatu.</p>
+            <hr />
+            <p>Mel id sensibus explicari rationibus, in nec quod everti, decore appetere te sea. Nisl ipsum habemus ea mei, in aeterno definitionem sit. Cu mei homero epicuri deleniti, affert iriure timeam ei mea. Pertinax partiendo sed te. Mundi senserit percipitur ne per. Ex usu meliore consulatu.</p>
+            <hr />
+            <p class="light">Mel id sensibus explicari rationibus, in nec quod everti, decore appetere te sea. Nisl ipsum habemus ea mei, in aeterno definitionem sit. Cu mei homero epicuri deleniti, affert iriure timeam ei mea. Pertinax partiendo sed te. Mundi senserit percipitur ne per. Ex usu meliore consulatu.</p>
         </section>
         <!--<script src="js/main.js"></script>-->
     </body>
